--- a/style.css
+++ b/style.css
@@ -169,11 +169,135 @@ header {
     margin-top: 120px;
 }
 
-/*footer {
+footer {
     height: 224px;
     background-color: #F6F7FF;
+    margin: 0;
+    position: relative;
 }
 
 .footer__info {
     width: 252px;
+    height: 84px;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+    margin-left: 98px;
+}
+
+.footer__info__logo {
+    display: flex;
+    column-gap: 11px;
+    align-items: center;
+    margin-top: 53px;
+}
+
+.footer__info__logo--txt {
+    text-decoration: none;
+    font-family: "Work Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    color: #1F1E25;
+}
+
+.footer__info__txt {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 16.8px;
+    color: #707C87;
+    margin: 0;
+}
+
+.footer__menu {
+    display: flex;
+    flex-direction: column;
+    row-gap: 15px;
+    list-style: none;
+    position: absolute;
+    top: 51.1px;
+    left: 390px;
+    padding: 0;
+    margin: 0;
+    height: 104px;
+}
+
+.footer__menu__item {
+    font-size: 16px;
+    font-weight: 500;
+    color: #707C87;
+    text-decoration: none;
+}
+
+.footer__menu__item:hover {
+    color: #2C36F2;
+}
+
+.footer__support {
+    position: absolute;
+    left: 630px;
+    display: flex;
+    flex-direction: column;
+    margin-top: -45px ;
+}
+
+.footer__support__flex {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.footer__support__img {
+    width: 10px;
+    height: 16px;
+}
+
+.footer__support__number {
+    font-size: 16px;
+    font-weight: 500;
+    color: #1F1E25;
+}
+
+.footer__support__txt {
+    padding-left: 30px;
+    margin-top: -7px ;
+    color: #707C87;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.footer__telephone {
+    position: absolute;
+    left: 911px;
+    display: flex;
+    flex-direction: column;
+    margin-top: -45px ;
+}
+
+.footer__telephone__flex {
+    display: flex;
+    align-items: center;
+    gap: 17px;
+}
+
+.footer__telephone__number {
+    font-size: 16px;
+    font-weight: 500;
+    color: #1F1E25;
+}
+
+.footer__telephone__txt {
+    padding-left: 33px;
+    margin-top: -10px ; 
+    color: #707C87;
+    font-size: 12px;
+    font-weight: 400;
+    width: 150px;
+}
+
+.footer__social {
+    display: flex;
+    gap: 15px;
+    position: absolute;
+    left: 1200px;
+    margin-top: -25px;
 }
